--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="root">
-        <h1>Not Rendered</h1> <!-- when react code will run then react code will replace this h1 -->
+        <!-- <h1>Not Rendered</h1> when react code will run then react code will replace this h1 -->
     </div>
     <script type="module" src="./src/App.js"></script>
 </body>
